# compiler-project

./: .gitignore  README.md  ast.dot  factorial.ir  pyproject.toml
docs/: grammar.md  language_spec.md
examples/: arithmetic.asm  arithmetic.src  control_flow.src  factorial.src  geometry.src  hello.src
src/: main.py
src/codegen/: __init__.py  control_flow_generator.py  expression_generator.py  label_manager.py  register_allocator.py  stack_frame.py  x86_generator.py
src/ir/: __init__.py  basic_block.py  control_flow.py  ir_generator.py  ir_instructions.py
src/lexer/: lexer.py  token.py
src/parser/: ast.py  ast_printer.py  dot_generator.py  grammar.txt  parser.py
src/runtime/: runtime.asm
src/semantic/: analyzer.py  errors.py  symbol_table.py  types.py
src/utils/: error.py
tests/: test_parser.py  test_semantic.py
tests/codegen/: test_runner.py
tests/control_flow/: test_runner.py
tests/ir/: test_runner.py
tests/ir/expected/: test_arithmetic.expected  test_binary.expected  test_call.txt  test_factorial.txt  test_if.expected
tests/ir/generation/: test_arithmetic.src  test_binary.src  test_call.src  test_factorial.src  test_if.src
tests/lexer/invalid/: test_bad_float.src.tokens  test_bad_identifier_start.src  test_bad_identifier_start.src.tokens  test_bad_identifier_start.tokens  test_invalid_char.src  test_invalid_char.src.tokens  test_invalid_char_dollar.src  test_invalid_char_dollar.src.tokens  test_invalid_char_question.src  test_invalid_char_question.src.tokens  test_malformed_number.src  (+6 more)
tests/test_runner/: run_tests.py
(+116 files in other folders)
