[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "minicompiler"
version = "0.1.0"
description = "A simplified C-like compiler for coursework"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { }
]

[project.scripts]
minicompiler = "src.main:main"

[tool.setuptools.packages.find]
where = ["src"]